tests/requests/invalid/invalid_field_value_01.http
GET / HTTP/1.1\r\n
Host: x\r\n
Newline: a\n
Content-Length: 26\r\n
GET / HTTP/1.1\n
Host: x\r\n
\r\n
